@@ -134,7 +134,7 @@ subsubsection "Tests"
 definition "test1_parity =
   ''x'' ::= N 1;;
   WHILE Less (V ''x'') (N 100) DO ''x'' ::= Plus (V ''x'') (N 2)"
-value [code] "show_acom (the(AI_parity test1_parity))"
+value "show_acom (the(AI_parity test1_parity))"
 
 definition "test2_parity =
   ''x'' ::= N 1;;
